--- a/formulario.html
+++ b/formulario.html
@@ -5,6 +5,19 @@
         <title>Formulario</title>
     </head>
     <body>
-        
+        <form action="calculadora.php"  method="get">
+            <label for="op1">Primer operando</label>
+            <input type="text" id="op1"   /><br/>
+
+            <label for="op2">Segundo operando</label>
+            <input type="text" id ="op2"  /><br />
+
+            <select>
+                <option value="+">Suma</option>
+                <option value="-">Resta</option>
+                <option value="*">Multiplicar</option>
+                <option value="/">Dividir</option>
+            </select>
+        </form>
     </body>
 </html>
